--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,6 @@ services:
     environment:
       - "ASPNETCORE_ENVIRONMENT="
       - Serilog__WriteTo__0__Args__path=webticket.log
-      - "ConnectionStrings__TicketSystemConnectionString=Server=192.168.0.114,1533;Database=DEV_OPMCReport;User Id=sa;Password=Sa12345678;Application Name=WebTicketSystem"
+      - "ConnectionStrings__TicketSystemConnectionString=Server=192.168.1.101,1533;Database=DEV_TicketSystem;User Id=sa;Password=Sa12345678;Application Name=WebTicketSystem"
    
 
